Fixed header overflow on phone viewport

--- a/src/modules/header/style.module.css
+++ b/src/modules/header/style.module.css
@@ -44,8 +44,8 @@
 
 @media only screen and (max-width: 767px) {
     .header_content_wrapper {
-        padding-left: 12px !important;
-        padding-right: 12px !important;
+        padding-left: 1em !important;
+        padding-right: 1em !important;
     }
 
     .page_header_logo_image {
